--- a/prak pw/prak mg 9/login.html
+++ b/prak pw/prak mg 9/login.html
@@ -10,74 +10,22 @@
 </head>
 
 <body>
-    <div class="regist-sec">
-        <div class="container box-regist">
-            <h3>DAFTAR AKUN</h3>
-            <form action="insert.php" method="post">
-                <!-- FORM STEP 1----------- -->
-                <div class="step show-form">
-                    <!-- NAMA -->
-                    <div class="form-group">
-                        <label for="nama">Nama</label>
-                        <input type="text" class="form-control" name="nama" id="nama">
-                    </div>
-                    <!-- NRP---------- -->
-                    <div class="form-group">
-                        <label for="nrp">NRP</label>
-                        <input type="text" class="form-control" name="nrp" id="nrp">
-                    </div>
-                    <!-- TTL----------- -->
-                    <div class="form-group">
-                        <label for="ttl">Tempat dan Tanggal lahir</label>
-                        <div class="row">
-                            <div class="col">
-                                <input type="text" class="form-control" name="tmptLAHIR" id="ttl"
-                                placeholder="Kota Kelahiran">
-                            </div>
-                            <div class="col">
-                                <input type="date" class="form-control" name="tglLAHIR" id="ttl"
-                                placeholder="Tanggal lahir">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Alamat-------- -->
-                    <div class="form-group">
-                        <label for="alamat">Alamat Tempat Tinggal</label>
-                        <input type="text" class="form-control" id="alamat" name="alamat">
-                    </div>
-                    <!-- NEXT-BTN -->
-                    <button class="btn btn-main" type="button" id="nextbtn">Next</button>
-                </div>
-                <!-- END OF FORM STEP 1 -->
-    
-                <!-- FORM STEP 2 -->
-                <div class="step2 hide-form">
-                    <!-- Nomor HP -->
-                    <div class="form-group">
-                        <label for="nohp">Nomor Telepon</label>
-                        <input type="text" class="form-control" id="nohp" name="nohp">
-                    </div>
-                    <!-- Email -->
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    <!-- USERID----------- -->
-                    <div class="form-group">
-                        <label for="userid">Username</label>
-                        <input type="text" class="form-control" name="userid" id="userid">
-                    </div>
-                    <!-- PASSWORD---------- -->
-                    <div class="form-group">
-                        <label for="pswd">Password</label>
-                        <input type="password" class="form-control" name="userpswd" id="pswd">
-                    </div>
-                    <!-- PREV BTN -->
-                    <button class="btn btn-main" type="button" id="prevbtn">Prev</button>
-                    <!-- SUBMIT BTN -->
-                    <button class="btn btn-main" type="submit" id="submitbtn">Submit</button>
-                </div>
-                <!-- END OF FORM STEP 2 -->
+    <div class="login-sec">
+        <div class="container box-login">
+            <h3>LOGIN</h3>
+            <form action="" method="post">
+                <!-- USERID----------- -->
+				<div class="form-group">
+					<label for="userid">Username</label>
+					<input type="text" class="form-control" name="userid" id="userid">
+				</div>
+				<!-- PASSWORD---------- -->
+				<div class="form-group">
+					<label for="pswd">Password</label>
+					<input type="password" class="form-control" name="userpswd" id="pswd">
+				</div>
+                <button class="btn btn-main" type="submit">Masuk</button>
+                <h6 class="text-center">Belum punya akun? <a href="regist.php">Daftar</a></h6>
             </form>
         </div>
     </div>
