modified:   asset/css/main.css 	new file:   asset/js/main.js 	new file:   dashboard.css 	modified:   login.html 	modified:   main.php

--- a/prak pw/prak mg 9/login.html
+++ b/prak pw/prak mg 9/login.html
@@ -4,35 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daftar Akun</title>
-	<link rel="stylesheet" href="asset/css/bootstrap.min.css">
-	<link rel="stylesheet" href="asset/css/main.css">
+    <title>DSS Scholarship | Dashboard</title>
+    <link rel="icon" href="asset/img/logo-title.png">
+    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="login-sec">
-        <div class="container box-login">
-            <h3>LOGIN</h3>
-            <form action="" method="post">
-                <!-- USERID----------- -->
-				<div class="form-group">
-					<label for="userid">Username</label>
-					<input type="text" class="form-control" name="userid" id="userid">
-				</div>
-				<!-- PASSWORD---------- -->
-				<div class="form-group">
-					<label for="pswd">Password</label>
-					<input type="password" class="form-control" name="userpswd" id="pswd">
-				</div>
-                <button class="btn btn-main" type="submit">Masuk</button>
-                <h6 class="text-center">Belum punya akun? <a href="regist.php">Daftar</a></h6>
-            </form>
+    <div class="home-sec">
+        <div class="sidebar position-fixed" id="sidebar">
+            <img src="asset/img/logo.png" alt="DSS Scholarship" class="logo">
+            <div class="sidebar-menu container-fluid">
+                <ul>
+                    <li id="prof">
+                        <a href="#" class="link1 active"><span class="fa fa-users"></span>
+                            <span class="list">Profil User</span></a>
+                    </li>
+                    <li id="datamhs">
+                        <a href="#" class="link2"><span class="fa fa-trophy"></span>
+                            <span class="list">Data Mahasiswa</span></a>
+                    </li>
+                    <li id="datatugas">
+                        <a href="#" class="link3"><span class="fa fa-trophy"></span>
+                            <span class="list">Data Tugas</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="main-content">
+            <header>
+                <h6>Selamat Datang di Admin</h6>
+                <h4><a href="logout.php">Logout</a></h4>
+            </header>
         </div>
     </div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
 	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="asset/js/regist.js"></script>
+<script src="asset/js/main.js"></script>
 
 </html>
