modified:   asset/css/main.css 	new file:   asset/img/me.jpg 	modified:   asset/js/main.js 	modified:   coba.html 	new file:   detail.php 	modified:   insert.php 	modified:   main.php

--- a/prak pw/prak mg 9/coba.html
+++ b/prak pw/prak mg 9/coba.html
@@ -4,29 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-	<link rel="stylesheet" href="asset/css/bootstrap.min.css">
-	<link rel="stylesheet" href="asset/css/main.css">
+    <title>Admin</title>
+    <link rel="icon" href="asset/img/logo-title.png">
+    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
+    <link rel="stylesheet" href="asset/css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="login-sec">
-        <div class="container box-login">
-            <h3>LOGIN</h3>
-            <form action="" method="post">
-                <!-- USERID----------- -->
-				<div class="form-group">
-					<label for="userid">Username</label>
-					<input type="text" class="form-control" name="userid" id="userid">
-				</div>
-				<!-- PASSWORD---------- -->
-				<div class="form-group">
-					<label for="pswd">Password</label>
-					<input type="password" class="form-control" name="userpswd" id="pswd">
-				</div>
-                <button class="btn btn-main" type="submit">Masuk</button>
-                <h6 class="text-center">Belum punya akun? <a href="regist.php">Daftar</a></h6>
-            </form>
+    <div class="home-sec">
+        <div class="sidebar position-fixed" id="sidebar">
+            <img src="asset/img/logo.png" alt="DSS Scholarship" class="logo">
+            <div class="sidebar-menu container-fluid">
+                <ul>
+                    <li>
+                        <a href="#" class="active"><span class="fa fa-desktop"></span>
+                            <span class="list">Detail Data</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="main-content">
+            <header>
+                <p>Data -SI FULAN-</p>
+            </header>
+            <!-- DETAIL-------- -->
+            <div class="container-fluid content-detail show" id="link-detail">
+                <div class="row">
+                    <div class="col-md-8">
+                        <table class="table table-striped">
+                            <tbody>
+                                <tr>
+                                    <td>Nama</td>
+                                    <td>:</td>
+                                    <td>Putri Ayu Nisa Az-Zahra</td>
+                                </tr>
+                                <tr>
+                                    <td>NRP</td>
+                                    <td>:</td>
+                                    <td>3120600018</td>
+                                </tr>
+                                <tr>
+                                    <td>Tempat Lahir</td>
+                                    <td>:</td>
+                                    <td>Balikpapan</td>
+                                </tr>
+                                <tr>
+                                    <td>Alamat</td>
+                                    <td>:</td>
+                                    <td>JL.DI.Panjaitan RT.06 No.92 Gn.Samarinda</td>
+                                </tr>
+                                <tr>
+                                    <td>No Telepon</td>
+                                    <td>:</td>
+                                    <td>(+62) 83153423231</td>
+                                </tr>
+                                <tr>
+                                    <td>Email</td>
+                                    <td>:</td>
+                                    <td>puayyssii12@gmail.com</td>
+                                </tr>
+                                <tr>
+                                    <td>Username</td>
+                                    <td>:</td>
+                                    <td>puay12</td>
+                                </tr>
+                                <tr>
+                                    <td>Password</td>
+                                    <td>:</td>
+                                    <td>Jenonim1244</td>
+                                </tr>
+                            </tbody>  
+                        </table>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="asset/img/me.jpg" alt="photo">
+                    </div>
+                </div>
+                <!-- petunjuk -->
+                <p class="petunjuk">Klik tombol di bawah ini untuk kembali ke halaman sebelumnya.</p>
+                <!-- button kembali -->
+                <a href="main.php">
+                    <button type="button" class="btn btn-main prev">Kembali</button>
+                </a>
+            </div>
         </div>
     </div>
 </body>
